...
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <!-- Action buttons -->
            <Button
                android:id="@+id/btnDownloadFinalEntrants"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="#FFB0B0"
                android:text="Export List To CSV"
                android:textAllCaps="false" />
...
